--- a/contents/lp/html-b.xhtml
+++ b/contents/lp/html-b.xhtml
@@ -72,6 +72,12 @@ HTMLエンジニアが全てを変える</div>
 <br/>八百幡コンポーネンツはHTMLエンジニアに強力な武器を持たせるプロダクトです。
 <br/>GitHubでプロジェクトを進めています。</p>
 <div class="text-center"><a href="https://github.com/inomoto-hironobu/components" class="btn btn-primary business">GitHubのリポジトリ</a></div>
+<p>この自動グラフ生成機能はウェブサイトの価値を劇的に向上させます。
+<br/>例えば、私は現在、「つぐもん」というアンケートサイトを運営していて、八百幡コンポーネンツが大いに役に立っています。
+<br/>参考を一つ上げると、<a href="https://yaohata.net:8181/tsugumon/enquete?id=12">消費税と給付金のアンケート</a>があります。
+<br/>つぐもんは投票すると結果が見れる仕様なので、とりあえず投票してみてください。グラフが現れます。</p>
+<figure><img src="img/engraph.jpg" alt="円グラフ"/></figure>
+<p>いかがですか。アンケート結果を画像で見ると、とても分かりやすくなることが分かります。</p>
 <p>八百幡コンポーネンツはまだまだ発展途上です。進化の余地が大いにあります。</p>
 </section>
 <section>
