ファイルの整理と更新

--- a/contents/lp/f4w-a.xhtml
+++ b/contents/lp/f4w-a.xhtml
@@ -30,8 +30,8 @@ F4WはWordPressのテーマとして提供され、その機能によってFrame
 <p>…といったところです。<br/>
 言葉だけでは分かりませんね。実際に見てみましょう。</p>
 <ul>
-<li><a href="http://h128-22-154-90.ablenetvps.ne.jp/wordpress/?theme=kurofunasaki">wordpress/?theme=kurofunasaki</a></li>
-<li><a href="http://h128-22-154-90.ablenetvps.ne.jp/wordpress/?theme=yaohata">wordpress/?theme=yaohata</a></li>
+<li><a href="https://yaohata.net/wordpress/?theme=kurofunasaki">wordpress/?theme=kurofunasaki</a></li>
+<li><a href="https://yaohata.net/wordpress/?theme=yaohata">wordpress/?theme=yaohata</a></li>
 </ul>
 <p>まだ作りかけですが、ベースデザインの切り替えがどういうものかお分かりいただけるかと思います。</p>
 <p>このFramexsテーマの切り替えは、Googleアナリティクスとの連携によって、どのテーマが表示されたかをカウントできます。<br/>
