--- a/contents/lp/f4w-b.xhtml
+++ b/contents/lp/f4w-b.xhtml
@@ -22,8 +22,8 @@ F4WはWordPressのテーマとして提供され、その機能によってFrame
 機序はランダムにテーマを選定、またはURLパラメータによるテーマの指定もし、Cookieにどのテーマを使ったのかの情報を保存、アクセスのたびにCookieでのテーマ指定を行うことによって、各ベースデザインについてどれだけのページビューなどの持続性があるかを調べる…といったところです。<br/>
 言葉だけでは分かりませんね。実際に見てみましょう。</p>
 <ul>
-<li><a href="http://h128-22-154-90.ablenetvps.ne.jp/wordpress/?theme=kurofunasaki">黒船崎テーマ</a></li>
-<li><a href="http://h128-22-154-90.ablenetvps.ne.jp/wordpress/?theme=yaohata">八百幡テーマ</a></li>
+<li><a href="https://yaohata.net/wordpress/?theme=kurofunasaki">黒船崎テーマ</a></li>
+<li><a href="https://yaohata.net/wordpress/?theme=yaohata">八百幡テーマ</a></li>
 </ul>
 <p>まだ作りかけですが、ベースデザインの切り替えがどういうものかお分かりいただけるかと思います。</p>
 <p>このFramexsテーマの切り替えは、Googleアナリティクスとの連携によって、どのテーマが表示されたかをカウントできます。<br/>
