LPなどコンテンツの修正・編集

--- a/contents/boilerplates.xhtml
+++ b/contents/boilerplates.xhtml
@@ -19,6 +19,32 @@
 ちょっとしたことなら要件を確認していくだけで、<strong>無料で問題解決</strong>するかもしれません。<br/>
 技術関連の話題の質問を歓迎しています。ぜひとも疑問をお寄せください。</p>
 </div>
+
+<div id="運営情報">
+<section>
+<h3>運営情報</h3>
+<p>八百幡では成果報酬契約から準委任契約まで、さまざまな形式の契約での受託を行います。</p>
+</section>
+<section>
+<h3>運営日時</h3>
+<div>
+<dl>
+<dt>稼働可能時間</dt>
+<dd>月～土曜まで週5日のシフトで柔軟に対応します。※日曜日も案件により稼働可能です。
+<br/>9時から21時までの間で8時間対応できます。</dd>
+</dl>
+</div>
+</section>
+<section>
+<h3>費用</h3>
+<dl>
+<dt>報酬</dt>
+<dd>日給16000円となります。</dd>
+<dt>期間</dt>
+<dd>1日から長期まで対応します。</dd>
+</dl>
+</section>
+</div>
 <div id="電子契約">
 
 </div>
