--- a/contents/lp/saxon-b.xhtml
+++ b/contents/lp/saxon-b.xhtml
@@ -40,7 +40,7 @@
 $json?arr?*[?n2 >= 2]?n
 </code></pre>
 
-<p>私は、XPath3.1の知識を駆使し、JSONから必要な情報をスムーズかつ効率的に取り出すことができます。
+<p>私は、SaxonJSを使いXPath3.1の知識を駆使し、JSONから必要な情報をスムーズかつ効率的に取り出すことができます。
 <br/>さらにはXSLT3.0によって任意のデータ形式への返還もできます。
 <br/>もちろんXMLにも対応します。
 <br/>八百幡では、XPath3.1とXSL3.0のスペシャリストとして私が、あなたのビジネスをサポートし、JSONやXMLの特定データの抽出・加工により、あなたのビジネスを成功へと導きます。</p>
@@ -54,10 +54,10 @@ $json?arr?*[?n2 >= 2]?n
 私はは、あなたのビジネスを理解し、最適な解決策を提供するために全力で取り組みます。我々と一緒に、あなたのビジネスを次のレベルへと引き上げましょう。
 </p>
 <h3>【小まとめ】</h3>
-<p>私は、XPath3.1とXSL3.0の知識を駆使し、JSONやXMLの特定データの抽出・加工をスムーズかつ効率的に行います。
+<p>私は、SaxonJSによってXPath3.1とXSL3.0の知識を駆使し、JSONやXMLの特定データの抽出・加工をスムーズかつ効率的に行います。
 <br/>八百幡のサービスにより、時間とコストの削減、正確性、カスタマイズ性を実現することができます。我々と一緒に、あなたのビジネスを次のレベルへと引き上げましょう。</p>
 <internal-fetch path="../boilerplates.xhtml" target="お問合せ"/>
-<internal-quote path="../operation.xhtml" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報"/>
 </section>
 </article>
 </body>
