--- a/contents/lp/xml-a.xhtml
+++ b/contents/lp/xml-a.xhtml
@@ -79,7 +79,7 @@ transformer.transform(new DOMSource(doc),new StreamResult(Files.newOutputStream(
 </section>
 <p>まずは「こうしてほしい」「こうできないか」など連絡をお願いします。</p>
 <internal-fetch path="../boilerplates.xhtml" target="お問合せ"/>
-<internal-quote path="../operation.xhtml" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報"/>
 <p>労働期間が1日のちょっとした頼みなら、ランサーズからなら業務委託契約書などは必要なくすばやく購入ができます。</p>
 <div class="card" style="max-width:32rem;margin:1rem auto;">
 <div class="card-body">
