--- a/contents/lp/xml-b.xhtml
+++ b/contents/lp/xml-b.xhtml
@@ -27,7 +27,7 @@
 そして予定通り、3日で業務は完了となり、大変喜ばれました。</p> 
 <p>このように、今の私はXMLに関わることならなんでも、1日から数カ月の長期まで、仕事を請け負っています。</p>
 <internal-fetch path="../boilerplates.xhtml" target="お問合せ"/>
-<internal-quote path="../operation.xhtml" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報"/>
 <p>また、1日で終わるちょっとした業務ならランサーズ経由で受け付けています。この場合なら業務委託契約書は不要です。</p>
 <div class="card" style="max-width:32rem;margin:1rem auto;">
 <div class="card-body">
