--- a/contents/lp/xml-c.xhtml
+++ b/contents/lp/xml-c.xhtml
@@ -32,7 +32,7 @@
 <div class="col-md">
 <figure>
 <figcaption>日本から</figcaption>
-<img src="../../img/3108290_s.jpg"/>
+<img src="img/3108290_s.jpg"/>
 </figure>
 </div>
 </div>
@@ -50,7 +50,7 @@
 <div class="col-md">
 <figure>
 <figcaption>支配的な地位</figcaption>
-<img src="../../img/3344027_s.jpg"/>
+<img src="img/3344027_s.jpg"/>
 </figure>
 </div>
 </div>
