--- a/contents/lp/saxon-c.xhtml
+++ b/contents/lp/saxon-c.xhtml
@@ -74,8 +74,8 @@ transformer.transform(new DOMSource(doc),new StreamResult(Files.newOutputStream(
     特にJSONやXMLなどファイル形式がまたがっている状態でのデータの統合はXSLT3.0の威力を発揮します。<br/>
     高度な処理を行うプログラムをおつくりするなど、私の技術知識を活かして課題を解決します。
     <br/>XML,JSON,CSVの作製、変換、結合、分離など、DOCXやXLSXの編集、抽出もJavaとXSLTを駆使してどんな要望にも応えます。</p>
-<internal-fetch path="../boilerplates.xhtml" target="お問合せ"/>
-<internal-quote path="../operation.xhtml" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
 </section>
 </article>
 </body>
