--- a/contents/lp/saxon-a.xhtml
+++ b/contents/lp/saxon-a.xhtml
@@ -34,8 +34,8 @@
 <br/>JSONやXMLなど、さまざまファイル形式にまたがっている状態のデータの統合は、XSLT3.0が威力を発揮します。
 <br/>SaxonまたはSaxonJSを駆使した、高度な処理を行うプログラムをおつくりするなど、私の技術知識を活かして、課題を解決します。
 <br/>XML、JSON、CSVの作製、変換、結合、分離、編集、抽出など、どんな要望にも応えます。</p>
-<internal-fetch path="../boilerplates.xhtml" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
 </section>
 </article>
 </body>
