--- a/contents/lp/xml-b.xhtml
+++ b/contents/lp/xml-b.xhtml
@@ -22,12 +22,12 @@
 これら開発の経験は、必ずあなたの課題解決にお役に立つことができます。</p>
 <p>例えば、JavaScriptとXSLTの比較をレポートする文章を作るための相談をしてほしい、という依頼がありました。<br/>
 そこで私は資料を作り、相談に乗りました。<br/>
-<img style="border:solid 2px gray" src="../../img/jsandxslt.png"/><br/>
+<img style="border:solid 2px gray" src="img/jsandxslt.png"/><br/>
 成果は上々で、これによって、レポートの間違った箇所は訂正され、JSとXSLTの特徴がはっきり分かるようになりました。<br/>
 そして予定通り、3日で業務は完了となり、大変喜ばれました。</p> 
 <p>このように、今の私はXMLに関わることならなんでも、1日から数カ月の長期まで、仕事を請け負っています。</p>
-<internal-fetch path="../boilerplates.xhtml" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
 <p>また、1日で終わるちょっとした業務ならランサーズ経由で受け付けています。この場合なら業務委託契約書は不要です。</p>
 <div class="card" style="max-width:32rem;margin:1rem auto;">
 <div class="card-body">
