--- a/contents/lp/xml-c.xhtml
+++ b/contents/lp/xml-c.xhtml
@@ -71,6 +71,8 @@
 参加してみませんか。<br/>
 何か関心が少しでもあるならこのページをシェアをお願いします。</p>
 </section>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
 </article>
 </body>
 </html>
