LPのタイトルを合わせた

--- a/contents/lp/html-c.xhtml
+++ b/contents/lp/html-c.xhtml
@@ -4,11 +4,11 @@
 <?framexs.properties ../../properties/article.xml?>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja" prefix="og:https://ogp.me/ns#">
 <head>
-<title>XHTML3計画</title>
+<title>HTML進化事業(C)</title>
 <meta property="og:title" content="日本からXHTML3計画"/>
+<meta property="og:type" content="article"/>
 <meta property="og:description" content="日本には優秀なエンジニアが多い事を生かし、日本から世界へ向けて動き出すことを願いXHTML3計画を進めています。"/>
-<meta property="og:url" content="https://inomoto-hironobu.github.io/contents/calling/xhtml3.xhtml"/>
-<meta property="og:image" content="https://inomoto-hironobu.github.io/img/3108290_s.jpg"/>
+<meta property="og:image" content="https://yaohata.net/asset/img/3108290_s.jpg"/>
 </head>
 <body id="main">
 <article>
