--- a/contents/lp/saxon-c.xhtml
+++ b/contents/lp/saxon-c.xhtml
@@ -4,7 +4,7 @@
 <?framexs.properties ../../properties/lp.properties.xml?>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja">
 <head>
-<title>データ事業(A)</title>
+<title>Saxon事業(C)</title>
 <meta name="description" content="XML、CSV、JSONのデータを加工、合成する業務を請け負うことを書いています。"/>
 </head>
 <body id="main">
