--- a/contents/lp/xml-c.xhtml
+++ b/contents/lp/xml-c.xhtml
@@ -5,12 +5,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="https://ogp.me/ns#" prefix="og:https://ogp.me/ns#" lang="ja">
 <head>
 <meta charset="UTF-8"/>
-<title>XML会社の設立</title>
+<title>XML事業(C)</title>
 <meta property="og:title" content="XML会社の設立"/>
 <meta property="og:type" content="article"/>
 <meta property="og:description" content="Framexs、XPath3.1、XDM3.0、そしてXSLT3.0。1998年に発表以来、XMLは重要技術として大きな潜在能力を秘めつつ、進化を遂げています。しかし、今はまだその力を開花させているとは言えません。
 ですが、ついにXMLがITの中核になる時が来ました。XMLを事業とする会社を設立し、世界で戦うことについて考えをまとめています。"/>
-<meta property="og:image" content="https://inomoto-hironobu.github.io/img/23863805_s.jpg"/>
+<meta property="og:image" content="https://yaohata.net/asset/img/23863805_s.jpg"/>
 <meta name="description" content="Framexsを事業にする会社設立について考えをまとめています。"/>
 <meta name="modified" content="2022-03-27"/>
 </head>
