--- a/contents/lp/html-b.xhtml
+++ b/contents/lp/html-b.xhtml
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="https://ogp.me/ns#" prefix="og:https://ogp.me/ns#" lang="ja">
 <head>
 <meta charset="UTF-8"/>
-<title>HTML進化事業(A)</title>
+<title>HTML進化事業(B)</title>
 <meta property="og:title" content="XHTML、Framexs、八百幡コンポーネンツーHTMLの全てを変えるとき"/>
 <meta property="og:type" content="article"/>
 <meta property="og:description" content="XHTML、Framexs、八百幡コンポーネンツーHTMLの全てを変えるとき。HTML事業についてのランディングページ"/>
@@ -14,122 +14,67 @@
 <body>
 <main id="main">
 <article>
-<section class="row justify-content-center align-items-center" style="background:url('../../asset/img/3334873_s.jpg'); background-repeat: no-repeat;background-position: center;">
-<div class="col-lg-8 text-center text-white font-weight-bold" style="font-size:3rem">HTMLエンジニアの全てを変える<br/>
-HTMLエンジニアが全てを変える</div>
-</section>
 <section>
-<h2>日本のHTMLエンジニアは不遇に遭っている</h2>
-<p>HTMLエンジニアはウェブページの根幹を支える存在であり、エンジニアリングの精髄とも言える存在です。
-<br/>しかしなぜか、HTMLエンジニアの地位は低く、社会からは不当な評価を受け、不遇の境遇に陥っているのです。
-<br/>一方日本には優秀なエンジニアが多いとされています。しかし実際には、IT分野ではアメリカが先頭を引っ張り、日本はただ追いすがっているだけの状況がずっと続いています。
-<br/>これらのことによって、「日本のHTMLエンジニア」は世界の中で顧みられることのない存在になってしまっています。</p>
-<p>私はこれはおかしいと思います。
-<br/>そこで、私はこの現状を打破するお話をしたいと思います。</p>
-</section>
-<section>
-<h2>HTMLのフレームワークとFramexs</h2>
-<div class="code-container">
-<pre><code class="language xml"><![CDATA[<?xml version="1.0"?>
-<?xml-stylesheet type="application/xml" href="../../framexs/framexs.xsl"?>
-<?framexs.commands ../../commands.xml?>
-<?framexs.properties ../../properties/lp-a.properties.xml?>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="ja">]]></code></pre>
-</div>
-<p>このコードは今あなたが見ている、このページの冒頭部分です。
-<br/>先頭の<![CDATA[<?xml ...]]>は何でしょうか？これは、このページがXMLであることを示すためのXML宣言です。
-<br/>htmlタグに名前空間もあるので、これはXHTMLですね。
-<br/>では<![CDATA[<xml-stylesheet ...]]>と<![CDATA[<?framexs...]]>となっているのは？
-<br/>これらはXMLの処理命令で、特にxml-stylesheetはスタイルシートを指定するもので、この場合ではXSLTファイルを指定しています。
-<br/>framexs...はFramexsで使うためのものです。
-</p>
-<p>Framexsとは、クライアントサイドでテンプレートとコンテンツを合成し、HTMLを生成する、XSLTで書かれたフレームワークです。
-<br/>ナンダカフラリ氏が原作を作り、現在では私一人で開発しています。</p>
-<div class="text-center"><a href="https://github.com/inomoto-hironobu/framexs" class="btn btn-primary business">GitHubのリポジトリ</a></div>
-<p>要素、属性の構成をFTMLというテンプレートに集約させることで再利用、つまりコードを使いまわす仕組みです。
-<br/>このページもFTMLを利用しています。その一部、titleタグのコードはこうなっています。</p>
-
-<div class="code-container">
-<pre><code class="language xml"><![CDATA[<title><framexs:title/> - <framexs:property name="site-name"/></title>]]></code></pre>
-</div>
-<p>これによって、例えば、静的サイトを管理するにあたっては、煩雑さを消しつつ自由でありながらWordPressのような動的サイトに匹敵する劇的なコンテンツの運用簡易性をもたらします。
-<br/>もちろん、WordPressのような動的サイトと組み合わせることもできます。</p>
-</section>
-<section>
-<h2>Web Componentsと八百幡コンポーネンツ</h2>
-<p>ここに円グラフがありますね。</p>
-<pie-chart src="test.csv" type="csv" row="2010" width="640" height="400">
-<attributes style="max-width:600px;width:100%"/>
-</pie-chart>
-<p>これは<a href="test.csv">test.csv</a>という架空のデータのうち、一部を読み取って変換しています。
-<br/>そのためのコードはたったのこれだけです。</p>
-<div class="code-container">
-<pre><code class="language xml"><![CDATA[<pie-chart csv="test.csv" col="年" row="2010" width="640" height="400">
-<attr style="max-width:640;width:100%"/>
-</pie-chart>]]></code></pre>
-</div>
-<p>これはWeb Componentsというテクノロジーを利用してカスタムタグを定義した、八百幡コンポーネンツというものを使っているからです。
-<br/>八百幡コンポーネンツはHTMLエンジニアに強力な武器を持たせるプロダクトです。
-<br/>GitHubでプロジェクトを進めています。</p>
-<div class="text-center"><a href="https://github.com/inomoto-hironobu/components" class="btn btn-primary business">GitHubのリポジトリ</a></div>
-<p>この自動グラフ生成機能はウェブサイトの価値を劇的に向上させます。
-<br/>例えば、私は現在、「つぐもん」というアンケートサイトを運営していて、八百幡コンポーネンツが大いに役に立っています。
-<br/>参考を一つ上げると、<a href="https://yaohata.net:8181/tsugumon/enquete?id=12">消費税と給付金のアンケート</a>があります。
-<br/>つぐもんは投票すると結果が見れる仕様なので、とりあえず投票してみてください。グラフが現れます。</p>
-<figure><img src="img/engraph.jpg" alt="円グラフ"/></figure>
-<p>いかがですか。アンケート結果を画像で見ると、とても分かりやすくなることが分かります。</p>
-<p>八百幡コンポーネンツはまだまだ発展途上です。進化の余地が大いにあります。</p>
-</section>
-<section>
-<h2>XHTML3プロジェクトへ参加しよう</h2>
-<p>あなたはHTMLの仕様を知っていますか？HTMLの仕様はWHATWGによってHTML Living Standardと呼ばれています。
-<br/><a href="https://html.spec.whatwg.org/multipage/">https://html.spec.whatwg.org/multipage/</a>
-<br/>日本語翻訳:https://momdo.github.io/html/
-<br/>その中、私はHTMLをXMLで再定義したXHTML3を作りたいと思っていて、まだ作り始めですがXHTML3のXSDをすでに用意しています。
-<br/><a href="https://github.com/inomoto-hironobu/framexs/blob/master/xsd/xhtml3.xsd">https://github.com/inomoto-hironobu/framexs/blob/master/xsd/xhtml3.xsd</a>
-</p>
-<p>XHTML3の仕様を考えているのは上記で述べたFramexsとの関係もありますが、なによりHTMLとは何か、をよく考えるためです。
-<br/>XHTML3計画に参加することはHTMLをより深く知ることにつながります。</p>
-<p>そして、XHTMLはHTMLとXMLの両方の性質を持っています。つまりXHTML3計画を通してXHTMLを学べば、HTMLとXMLの両方の知識が手に入ります。
-XSLT3.0などの最新技術によって、XMLは今後のWeb開発において重要な要素を担うことになります。</p>
-</section>
-<section>
-<h2>FileHTML拡張プロジェクト</h2>
-<p>HTMLはfileプロトコルでアクセスできます。例えば、
-<br/>file:///C:/html/foo.html というURLでローカルのHTMLを読むことができます。
-<br/>このようにアクセスされるHTMLを、FileHTMLと呼ぶことにして話を勧めますが、このFileHTMLをブラウザで読み込むときは、様々な制限があります。
-例えばJavaScriptで他のリソースにアクセスすることができません。</p>
-<div class="code-container">
-<pre><code class="language javascript"><![CDATA[fetch('data/foo.json')
-  .then((response) => response.json())
-  .then((data) => console.log(data));]]></code></pre>
-</div>
-とすれば、
-<pre style="white-space: pre-wrap">
-Access to fetch at 'file:///C:/html/foo.json' from origin 'null' has been blocked by CORS policy: Cross origin requests are only supported for protocol schemes: http, data, isolated-app, chrome-extension, chrome, https, chrome-untrusted.
+<h2>八百幡コンポーネンツ: データビジュアライゼーションの進化</h2>
+<p><img style="width:100%" src="img/27732666_s.jpg"/></p>
+<p>データは現代のビジネスにおいて最も貴重な資産の一つとなりました。しかし、データを理解し、洞察を得るためには、適切なデータビジュアライゼーションツールが不可欠です。
+  <br/>ここで、八百幡コンポーネンツが登場し、データビジュアライゼーションの未来を切り開きます。</p>
+<h2>データを視覚的に理解する</h2>
+<p>データビジュアライゼーションは、複雑なデータを直感的に理解できる形式に変換するための強力なツールです。
+  <br/>グラフやチャートを使用することで、情報を視覚的に表現し、洞察を得ることができます。
+  <br/>しかし、データビジュアライゼーションの実装はしばしば技術的なハードルが高く、時間とリソースを要する作業でした。</p>
+<h2>八百幡コンポーネンツの登場</h2>
+<p>八百幡コンポーネンツは、データビジュアライゼーションの新たな次元を拓くために私が開発しました。
+  <br/>これは、HTMLエンジニアやビジネス向けのHTMLプロジェクトに最適な、使いやすいデータビジュアライゼーションツールです。
+  <br/>なぜ八百幡コンポーネンツを選ぶべきか、その理由を見てみましょう。</p>
+<h2>使いやすさと効率性</h2>
+<p>八百幡コンポーネンツは、D3.jsをベースに設計されており、データビジュアライゼーションのプロセスを単純化しました。独自のコーディングスキルがなくても、データを美しいグラフに変換できるようになります。豊富なドキュメンテーションと親しみやすいAPIにより、八百幡コンポーネンツを簡単に導入できます。</p>
+<pre>
+<code class="language csv">
+年度,一般会計税収,所得税,法人税,消費税,その他
+2011,42.8,13.5,9.4,10.2,9.7
+2012,43.9,14,9.8,10.4,9.7
+2013,47,15.5,10.5,10.8,10.2
+2014,54,16.8,11,16,10.2
+2015,56.3,17.8,10.8,17.4,10.3
+2016,55.5,17.6,10.3,17.2,10.4
+2017,58.8,18.9,12,17.5,10.4
+2018,59.9,19.5,12.3,17.8,10.3
+2019,62.5,19.9,12.9,19.4,10.3
+</code>
 </pre>
-<p>となります。これを変えてみましょう。仮に、</p>
+<p>このCSVの折れ線グラフを描きたい場合、普通はD3.jsを直接JavaScriptで書くことになります。
+  <br/>しかし、八百幡コンポーネンツでは拡張HTMLを書くだけでグラフを描けます。</p>
 <div class="code-container">
-<pre><code class="language xml"><![CDATA[<link rel="resource" name="hoge" href="data/foo.json"/>]]></code></pre></div>
-<p>とすれば、</p>
-<div class="code-container">
-<pre><code class="language javascript"><![CDATA[fetchByName("hoge")
-  .then((response) => response.json())
-  .then((data) => console.log(data));]]></code></pre>
+<pre><code class="language html"><![CDATA[<line-graph src="税収.csv" type="csv" width="600" height="400"
+  from-x="2011" to-x="2019" from-y="5" to-y="25">
+</line-graph>]]></code></pre>
 </div>
-<p>と、リソースにアクセスできるようにするのです。
-<br/>こうすると、例えばOneDrive、DropBoxなどのクラウドストレージ、あるいはNASなどのイントラストレージで有効活用すると、事務作業が大いにはかどるはずです。
-<br/>現状、クラウドストレージは、GASによってGoogleドライブが他より多く使われている傾向になっています。
-<br/>Chromeが多く使われていることも考えると、Googleの天下ですね。
-<br/>ここでもし、MicrosoftがFirefoxを支援して、FileHTML拡張機能を持つようになったなら、どうなるでしょう。
-<br/>とてもワクワクすることが起きると思います。</p>
-</section>
-<section>
-<h2>日本のHTMLエンジニアで、世界のITを変えよう</h2>
-<p>HTMLエンジニアは今まで不遇な扱いを受けてきましたが、それは彼らが提供する価値を正当に評価されていないからに他なりません。しかし、Framexs、八百幡コンポーネンツ、XHTML3、FileHTMLの拡張で、これからの輝かしい未来に向けて、HTMLエンジニアは自信を持って歩むことができます。
-<br/>常に進化し続ける技術を熟知し、織り交ぜることによって、HTMLエンジニアはより高度なスキルを習得し、新たな可能性を開拓することができます。
-<br/>日本のHTMLエンジニアからこれができるなら、自分たちが持つスキルや知識を適切に評価され、尊重され、そして、世界中の企業や組織が、私たちの専門知識を求めるでしょう。
-<br/>輝かしい未来を手に入れる一歩です。それでは、気軽にご連絡ください。</p>
+<p>このコードがこのようになります。</p>
+<p>
+<line-graph src="税収.csv" type="csv" width="600" height="400" from-x="2011" to-x="2019" from-y="5" to-y="25"></line-graph>
+</p>
+<h2>多彩なデータビジュアライゼーションオプション</h2>
+<p>八百幡コンポーネンツは、現状では折れ線グラフや円グラフのような単純な表現しかできません。しかし、将来は様々なデータビジュアライゼーションオプションを提供します。
+  <br/>カスタマイズ性が高く、プロジェクトの要件に合わせて設定できます。あなたのデータに最適なビジュアライゼーション方法を選抹できます。</p>
+<h2>高度なデータ処理</h2>
+<p>八百幡コンポーネンツは、複雑なデータ処理をサポートする予定です。
+  <br/>裏側で動く、SaxonJSによって複数のデータソースを統合し、リアルタイムデータの更新を扱うことができるようになります。
+  <br/>データの変化に迅速に対応し、ビジネスの成長に貢献します。</p>
+<h2>プロフェッショナルサポート</h2>
+<p><img src="img/q5.jpg"/></p>
+<p>八百幡コンポーネンツを導入する際には、開発者である私が手厚いサポートをいたします。
+  <br/>製品の導入から運用までをトータルでサポートし、技術的な課題に対する素早い対応を約束します。安心してプロジェクトを推進できます。</p>
+<h2>八百幡コンポーネンツの利点</h2>
+<dl>
+<dt>時間の節約: </dt><dd>データビジュアライゼーションの実装が簡単に行え、プロジェクトのスピードが向上します。煩雑な作業から解放され、重要な業務に集中できます。</dd>
+<dt>高品質なグラフ:</dt><dd>八百幡コンポーネンツにより、美しいデザインのグラフを簡単に作成できます。プロフェッショナルな外観のビジュアライゼーションを提供し、プロジェクトの品質を向上させます。</dd>
+<dt>データの理解:</dt><dd> 複雑なデータを視覚的に理解し、意思決定に必要な情報をすばやく把握できます。リアルタイムデータの追跡や比較により、洞察を深めます。</dd>
+<dt>コスト効率:</dt><dd>八百幡コンポーネンツの導入により、開発コストを削減できます。プロジェクトの予算を最適化し、ROIを向上させましょう。</dd>
+</dl>
+<h2>八百幡コンポーネンツを今すぐ導入しましょう</h2>
+<p>データビジュアライゼーションは、ビジネスの成功に不可欠なツールです。八百幡コンポーネンツを導入することで、データビジュアライゼーションの壁を取り払い、プロジェクトの成功に貢献します。</p>
+<p>八百幡コンポーネンツは、データビジュアライゼーションの新たな次元への招待状です。データの力を最大限に引き出し、意思決定を強化しましょう。</p>
 </section>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
