--- a/contents/lp/html-a.xhtml
+++ b/contents/lp/html-a.xhtml
@@ -6,9 +6,9 @@
 <head>
 <meta charset="UTF-8"/>
 <title>HTML進化事業(A)</title>
-<meta property="og:title" content="XHTML、Framexs、八百幡コンポーネンツーHTMLの全てを変えるとき"/>
+<meta property="og:title" content="八百幡コンポーネンツーHTMLの全てを変えるとき"/>
 <meta property="og:type" content="article"/>
-<meta property="og:description" content="XHTML、Framexs、八百幡コンポーネンツーHTMLの全てを変えるとき。HTML事業についてのランディングページ"/>
+<meta property="og:description" content="八百幡コンポーネンツーHTMLの全てを変えるとき。HTMLデータビジュアライズでウェブを変える。"/>
 <meta property="og:image" content="https://yaohata.net/asset/img/23863805_s.jpg"/>
 </head>
 <body>
