--- a/contents/lp/html-b.xhtml
+++ b/contents/lp/html-b.xhtml
@@ -52,7 +52,9 @@
 </div>
 <p>このコードがこのようになります。</p>
 <p>
-<line-graph src="税収.csv" type="csv" width="600" height="400" from-x="2011" to-x="2019" from-y="5" to-y="25"></line-graph>
+<line-graph src="税収.csv" type="csv" width="600" height="400" from-x="2011" to-x="2019" from-y="5" to-y="25">
+<attributes style="max-width:600px;width:100%"/>
+</line-graph>
 </p>
 <h2>多彩なデータビジュアライゼーションオプション</h2>
 <p>八百幡コンポーネンツは、現状では折れ線グラフや円グラフのような単純な表現しかできません。しかし、将来は様々なデータビジュアライゼーションオプションを提供します。
