--- a/contents/lp/tsugumon-a.xhtml
+++ b/contents/lp/tsugumon-a.xhtml
@@ -22,19 +22,47 @@
 <br/>普通の人はアンケートに答えられる機会は限られていますが、特に工夫しなければ、例えばある特定の人が機械的に100万回答を行う、ということもあり得ます。
 <br/>そこで、独占しづらいIPアドレスを単位にする、というわけです。</p>
 
+<h2>クロス集計の威力</h2>
+<p>つぐもんではクロス集計ができ、しかも公開しています。
+<br/>クロス集計した時の、情報の価値は絶大です。実際にアンケートを見てみましょう。</p>
+<ul>
+<li><a class="excellent" href="https://tsugumon.net/enquete?id=63">消費税5%と毎年10万円の給付、どちらがいいですか？</a>
+<br/><img src="img/消費税と給付.png" style="max-width:300px"/>
+</li>
+<li><a class="excellent" href="https://tsugumon.net/enquete?id=86">大きな政府か小さな政府か</a>
+<br/><img src="img/大きな政府か小さな政府か.png" style="max-width:300px"/>
+</li>
+</ul>
+<p>これらをクロス集計するとこうなります。
+<br/><img src="img/クロス集計.png" style="max-width:300px"/>
+<br/>さらに「大きな政府」「小さな政府」で部分クロス集計するとこうなります。
+<br/><img src="img/部分クロス集計大きな政府.png" style="max-width:300px"/>
+<br/><img src="img/部分クロス集計小さな政府.png" style="max-width:300px"/>
+<br/>結果は示唆に富んでいます。
+<br/>消費税減税は小さな政府志向の政策であり、給付金は大きな政府志向の政策です。
+<br/>なので、減税を望む人は小さな政府を望み、給付金を望む人は大きな政府を望むはずです。
+<br/>にもかかわらず、部分クロス集計の結果が変わりません。
+<br/>世論というものは、矛盾した要望を持つのでしょう。
+<br/>もちろんこれは現時点での結果ですので、今後変わる可能性があります。
+</p>
+
 <h2>ビジネスの提案</h2>
-<p>私はつぐもんを開発する傍ら、様々なアンケートを作り、それらの回答を募集し1000以上の反応を集めています。
+<p>私はつぐもんを開発する傍ら、様々なアンケートを作り、それらの回答を募集し、すでに多くの反応を集めています。
 <br/>ここで、ビジネスの提案をします。
 <br/>これらの蓄積したデータを活かした高度なデータを提供します。
 <br/>2つのアンケートを組み合わせるクロス集計によって、非常に価値の高い情報を得ることができます。
 <br/>既存のアンケートと、業務依頼による新たな個別アンケートを組み合わせることができます。
-<br/>私の開発した八百幡コンポーネンツを利用することで高度なビジネスインテリジェンスがもたらされます。
-<br/>さまざまな業務が考えられます。是非お問い合わせください。</p>
+<br/>私の開発した八百幡コンポーネンツを利用することで高度なビジネスインテリジェンスがもたらされます。</p>
 
-<h2>まずは</h2>
-<p>ポケットでこのページをブックマークしてください。</p>
-<div style="text-align:center"><a class="excellent" href="https://getpocket.com/edit?url=https://yaohata.net/contents/lp/tsugumon-a.xhtml">pocket</a></div>
-<p>そして<a href="https://tsugumon.net/answers">最新の回答一覧</a>を見て、つぐもんがどのようなものかを実際に体験してください。</p>
+<h2>まずは実際に見てみましょう</h2>
+<p>どうするかは、まずは実際に見て、回答して、判断されてください。
+<br/>クロス集計を見るには、対象となるアンケートに回答する必要があります。
+<br/>まずは先ほど挙げたアンケートから始める事をお勧めします。</p>
+<ul>
+    <li><a class="excellent" href="https://tsugumon.net/enquete?id=63">消費税5%と毎年10万円の給付、どちらがいいですか？</a></li>
+    <li><a class="excellent" href="https://tsugumon.net/enquete?id=86">大きな政府か小さな政府か</a></li>
+</ul>
+<p>もし他のアンケートがいいなら、<a class="excellent" href="https://tsugumon.net/enquetes?type=popular&amp;page=1&amp;class=ordinary">人気アンケート一覧</a>から入ると、良いでしょう。</p>
 </section>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
