--- a/contents/lp/tsugumon-b.xhtml
+++ b/contents/lp/tsugumon-b.xhtml
@@ -34,7 +34,7 @@
 <p>
 つぐもんを使えば、データが新たな価値をもたらします。具体的なケーススタディやデモとして、実際に無料で利用するのが手っ取り早いです。リンクをクリックしてください。
 </p>
-<div style="text-align:center"><a href="https://tsugumon.net/answers">つぐもんの最新の回答一覧</a></div>
+<div style="text-align:center"><a class="excellent" href="https://tsugumon.net/answers">つぐもんの最新の回答一覧</a></div>
 <p>
 つぐもんがどのように信頼性と有用性を提供するのかを体感してください。データが提供する可能性をあなたの手に。
 </p>
