--- a/contents/lp/tsugumon-b.xhtml
+++ b/contents/lp/tsugumon-b.xhtml
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="https://ogp.me/ns#" prefix="og:https://ogp.me/ns#" lang="ja">
 <head>
 <meta charset="UTF-8"/>
-<title>つぐもん(A)</title>
+<title>つぐもん(B)</title>
 <meta property="og:title" content="つぐもん"/>
 <meta property="og:type" content="article"/>
 <meta property="og:description" content="確かな統計、次世代アンケート、オンライン世論調査、データでウェブを変える。"/>
