--- a/contents/lp/tsugumon-c.xhtml
+++ b/contents/lp/tsugumon-c.xhtml
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="https://ogp.me/ns#" prefix="og:https://ogp.me/ns#" lang="ja">
 <head>
 <meta charset="UTF-8"/>
-<title>つぐもん(B)</title>
+<title>つぐもん(C)</title>
 <meta property="og:title" content="つぐもん"/>
 <meta property="og:type" content="article"/>
 <meta property="og:description" content="確かな統計、次世代アンケート、オンライン世論調査、データでウェブを変える。"/>
@@ -39,7 +39,7 @@
 現在は3問のアンケート作製代行を、2,000円（税込み2,200円）から依頼を受け付けています。
 例えばこの2,000円は、クラウドワークスでワーカーに、アンケートの回答の報酬として使います。
 <strong style="font-size:1.2rem">手数料は無料</strong>です。
-お気軽に試してみませんか。
+まずは2,000円で、お気軽に試してみませんか。
 </p>
 
 <h2>まとめ</h2>
