--- a/contents/lp/tsugumon-b.xhtml
+++ b/contents/lp/tsugumon-b.xhtml
@@ -15,37 +15,72 @@
 <main id="main">
 <article>
 <section>
-<h2>信頼性と洞察を一緒に。つぐもん。</h2>
-<p>
-つぐもんは、新しいレベルの信頼性とデータの洞察を提供します。IPアドレスを単位にした回答制限と、回答の取り消し機能が組み込まれています。これにより、高度な信頼性を持つ統計データを実現しました。
+<h2>つぐもん - 日本をよくする未来への一歩</h2>
+<h3>社会を鋭く分析し、高齢化に向き合うためのプラットフォーム</h3>
+<p>日本、私たちの大切な国。未来への課題に向き合い、社会をより良くするために、つぐもんが誕生しました。
+<br/>つぐもんは、アンケートサイトの新しい形。日本の今後に心を砕く裕福な皆さんに向けて、高度なデータ分析と洞察力を提供します。</p>
+<h3>日本をよくする</h3>
+<figure>
+<img src="img/3108290_s.jpg"/>
+</figure>
+<p>つぐもんは、日本をより良い未来に導くためのプラットフォームです。我々は国内外で激動する社会状況に目を光らせ、データ駆動のアプローチで問題にアプローチします。統計とグラフによる洞察は、日本の課題に対する理解を深め、解決策を導きます。
 </p>
-<h2>
-信頼性の高いデータを提供する理論</h2>
-<p>
-大企業が求めるのは信頼性と洞察です。つぐもんはその両方を手に入れる手助けをします。IPアドレス単位の制限により、偽の情報や重複データを排除し、真の洞察にたどり着けます。そして、回答の取り消し機能により、いつでも正確なデータを取得できます。
+<h3>社会を鋭く分析</h3>
+<figure>
+<img src="img/q10.jpg"/>
+</figure>
+<p>つぐもんの力は、社会を鋭く分析し、理解することにあります。統計データやグラフを活用し、社会の動きを把握。これにより、ユーザーは自分たちの意見や考えがどのように社会全体に影響を与えるかを理解できます。つぐもんは、情報の枠を越え、未来を見据えた社会の分析を提供します。</p>
+<h3>つぐもんで何ができるか？</h3>
+<dl>
+<dt>データ駆動の社会分析</dt><dd>つぐもんは、データを通して社会を分析し、グラフや統計を通じて視覚化。これにより、社会の動向を理解し、未来に向けた方針や政策提案が可能です。</dd>
+<dt>具体的なデータ</dt><dd>社会における具体的なデータを提供し、問題の本質に迫ります。</dd>
+<dt>コメント機能を通じた議論と交流</dt><dd>つぐもんでは、ユーザー同士がコメントを通じて議論し、知見を共有。多様な意見を尊重し、未来への課題に対する理解を深めます。</dd>
+</dl>
+<h3>クロス集計の威力</h3>
+<p>つぐもんではクロス集計ができ、しかも公開しています。
+<br/>クロス集計した時の、情報の価値は絶大です。実際にアンケートを見てみましょう。</p>
+<ul>
+<li><a href="https://tsugumon.net/enquete?id=63">消費税5%と毎年10万円の給付、どちらがいいですか？</a>
+<br/><img src="img/消費税と給付.png" style="max-width:300px"/>
+</li>
+<li><a href="https://tsugumon.net/enquete?id=86">大きな政府か小さな政府か</a>
+<br/><img src="img/大きな政府か小さな政府か.png" style="max-width:300px"/>
+</li>
+</ul>
+<p>これらをクロス集計するとこうなります。
+<br/><img src="img/クロス集計.png" style="max-width:300px"/>
+<br/>さらに「大きな政府」「小さな政府」で部分クロス集計するとこうなります。
+<br/><img src="img/部分クロス集計大きな政府.png" style="max-width:300px"/>
+<br/><img src="img/部分クロス集計小さな政府.png" style="max-width:300px"/>
+<br/>結果は示唆に富んでいます。
+<br/>消費税減税は小さな政府志向の政策であり、給付金は大きな政府志向の政策です。
+<br/>なので、減税を望む人は小さな政府を望み、給付金を望む人は大きな政府を望むはずです。
+<br/>にもかかわらず、部分クロス集計の結果が変わりません。
+<br/>世論というものは、矛盾した要望を持つのでしょう。
+<br/>つぐもんはこういったリアルなデータを浮き彫りにするのです。
+</p>
+<h2>時代を日本から作ろう</h2>
+<p>現在ではIT産業は、一部のアメリカの企業に独占されているといってもいい状況で、日本の存在感はほとんどありません。</p>
+<figure>
+<img src="img/3344027_s.jpg"/>
+</figure>
+<p>日本には優秀な人材が多くいます。にもかかわらず、日本はアメリカの成り行きを傍観し、何かが流行ればそれに追随する、というのが常態化しています。<br/>
+これを変えてみませんか？</p>
+<p>日本に必要なのは追随ではなく主導です。つぐもんは日本が、主体的に世界に働きかけるきっかけになるはずです。</p>
+
+<h3>未来への第一歩を踏み出そう</h3>
+<p>日本をより良くするための未来への第一歩は、今ここにあります。つぐもんを通じて、あなたの声が社会に届きます。高度なデータ分析、グラフによる視覚化、そしてコメント機能を活用して、日本の未来に寄与しませんか？
+<br/>今すぐつぐもんに参加し、日本を共により良くしましょう。
 </p>
 
-<h2>大企業向けの利点</h2>
+<h2>まずは2,000円から始めませんか</h2>
 <p>
-大企業はデータ駆動の意思決定を求めています。つぐもんはその手助けをします。クロス集計機能を利用することで、大規模なデータセットから洞察を導き出すことができます。これにより、市場動向の理解、顧客行動の予測、戦略の立案が可能になります。
+現在は3問のアンケート作製代行を、手数料2,000円+回答募集料2,000円の、計4,000円（税込み4,400円）から依頼を受け付けています。
+<br/>回答募集料は、クラウドワークスでワーカーに、アンケートの回答の報酬として使います。
+<br/>お気軽に試してみませんか。
 </p>
-
-<h2>データの力を実感</h2>
-<p>
-つぐもんを使えば、データが新たな価値をもたらします。具体的なケーススタディやデモとして、実際に無料で利用するのが手っ取り早いです。リンクをクリックしてください。
-</p>
-<div style="text-align:center"><a class="excellent" href="https://tsugumon.net/answers">つぐもんの最新の回答一覧</a></div>
-<p>
-つぐもんがどのように信頼性と有用性を提供するのかを体感してください。データが提供する可能性をあなたの手に。
-</p>
-
-<h2>まとめ</h2>
-<p>
-つぐもんは、信頼性と洞察を追求するあなたのパートナーです。IPアドレス制限と取り消し機能により、最高水準の信頼性を誇るデータを提供します。クロス集計機能を使って、データが持つ真の力を解き放ちましょう。信頼性と洞察を一緒に手に入れる道、それがつぐもんです。
-</p>
-<h2>ポケット</h2>
-<p>もしこのページが気になっているならポケットでこのページをブックマークしてください。</p>
-<div style="text-align:center"><a class="excellent" href="https://getpocket.com/edit?url=https://yaohata.net/contents/lp/tsugumon-a.xhtml">pocket</a></div>
+<h3>一緒に未来を築く、つぐもん。</h3>
+<p>ますは実際につぐもんを体験しましょう。<a href="https://tsugumon.net/enquetes?type=popular&amp;page=1&amp;class=ordinary">人気アンケート一覧</a>から入ると、良いでしょう。</p>
 </section>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
