--- a/contents/boilerplates.xhtml
+++ b/contents/boilerplates.xhtml
@@ -4,6 +4,19 @@
 <title>ボイラープレート</title>
 </head>
 <body>
+<div id="つぐもんキャンペーン">
+<p>初回限定、3つのアンケートを各100回答の収集を2000円で請け負います。
+手数料無料です。
+回答はクラウドワークスのタスク依頼を通して収集します。
+なお、回答が100個満たない場合もありますが、その場合でも返金はありません。</p>
+<p>通常プランでは、3つ以上のアンケートを各100上収集します。
+料金は都度ご相談となります。
+回答は初回限定プランと同じくクラウドワークスを通して収集します。</p>
+<p>アンケートはクロス集計でないと価値はありません。
+つぐもんではブランドイメージを高めるため、必ず3つ以上でのご依頼のみ受付となります。</p>
+    
+</div>
+
 <div id="お問合せ">
 <h3>お問合せなど</h3>
 <p>相談の申し込み・業務依頼・技術関連の質問など、さまざまな連絡に関しては、いくつかの手段をご用意しています。</p>
