--- a/contents/lp/tsugumon-a.xhtml
+++ b/contents/lp/tsugumon-a.xhtml
@@ -26,24 +26,20 @@
 <p>つぐもんではクロス集計ができ、しかも公開しています。
 <br/>クロス集計した時の、情報の価値は絶大です。実際にアンケートを見てみましょう。</p>
 <ul>
-<li><a class="excellent" href="https://tsugumon.net/enquete?id=63">消費税5%と毎年10万円の給付、どちらがいいですか？</a>
-<br/><img src="img/消費税と給付.png" style="max-width:300px"/>
+<li><a class="excellent" href="https://tsugumon.net/enquete?id=89">あなたはラーメンのスープで、どれが一番好きですか？</a>
+<br/><img src="img/あなたはラーメンのスープで、どれが一番好きですか.png" style="max-width:300px"/>
 </li>
-<li><a class="excellent" href="https://tsugumon.net/enquete?id=86">大きな政府か小さな政府か</a>
-<br/><img src="img/大きな政府か小さな政府か.png" style="max-width:300px"/>
+<li><a class="excellent" href="https://tsugumon.net/enquete?id=90">ラーメン屋の無料のサービス、何がいいですか？</a>
+<br/><img src="img/ラーメン屋の無料のサービス、何がいいですか.png" style="max-width:300px"/>
 </li>
 </ul>
 <p>これらをクロス集計するとこうなります。
-<br/><img src="img/クロス集計.png" style="max-width:300px"/>
-<br/>さらに「大きな政府」「小さな政府」で部分クロス集計するとこうなります。
-<br/><img src="img/部分クロス集計大きな政府.png" style="max-width:300px"/>
-<br/><img src="img/部分クロス集計小さな政府.png" style="max-width:300px"/>
-<br/>結果は示唆に富んでいます。
-<br/>消費税減税は小さな政府志向の政策であり、給付金は大きな政府志向の政策です。
-<br/>なので、減税を望む人は小さな政府を望み、給付金を望む人は大きな政府を望むはずです。
-<br/>にもかかわらず、部分クロス集計の結果が変わりません。
-<br/>世論というものは、矛盾した要望を持つのでしょう。
-<br/>もちろんこれは現時点での結果ですので、今後変わる可能性があります。
+<br/><img src="img/クロス集計あなたはラーメンのスープで、どれが一番好きですか.png" style="max-width:300px"/>
+<br/>見ての通り、スープによって人気のサービスが変わってきます。
+<br/>さらに「白ネギ」で部分クロス集計するとこうなります。
+<br/><img src="img/部部分クロス集計あなたはラーメンのスープで、どれが一番好きですか.png" style="max-width:300px"/>
+<br/>ラーメンのネギのトッピングと言えば青ネギが多いですが、豚骨ラーメンの場合は白ねぎが求められているようです。
+<br/>そういえば私も一覧でオーダーするときは白ねぎを頼むことが多いです。
 </p>
 
 <h2>ビジネスの提案</h2>
@@ -56,14 +52,9 @@
 
 <h2>まずは実際に見てみましょう</h2>
 <p>どうするかは、まずは実際に見て、回答して、判断されてください。
-<br/>クロス集計を見るには、対象となるアンケートに回答する必要があります。
-<br/>まずは先ほど挙げたアンケートから始める事をお勧めします。</p>
-<ul>
-    <li><a class="excellent" href="https://tsugumon.net/enquete?id=63">消費税5%と毎年10万円の給付、どちらがいいですか？</a></li>
-    <li><a class="excellent" href="https://tsugumon.net/enquete?id=86">大きな政府か小さな政府か</a></li>
-</ul>
-<p>もし他のアンケートがいいなら、<a class="excellent" href="https://tsugumon.net/enquetes?type=popular&amp;page=1&amp;class=ordinary">人気アンケート一覧</a>から入ると、良いでしょう。</p>
+<br/>まずは、<a class="excellent" href="https://tsugumon.net/enquetes?type=popular&amp;page=1&amp;class=ordinary">人気アンケート一覧</a>から入ると、良いでしょう。</p>
 </section>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="つぐもんキャンペーン"/>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
 </article>
