--- a/contents/lp/tsugumon-b.xhtml
+++ b/contents/lp/tsugumon-b.xhtml
@@ -82,6 +82,7 @@
 <h3>一緒に未来を築く、つぐもん。</h3>
 <p>ますは実際につぐもんを体験しましょう。<a href="https://tsugumon.net/enquetes?type=popular&amp;page=1&amp;class=ordinary">人気アンケート一覧</a>から入ると、良いでしょう。</p>
 </section>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="つぐもんキャンペーン"/>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
 </article>
