--- a/contents/lp/tsugumon-c.xhtml
+++ b/contents/lp/tsugumon-c.xhtml
@@ -50,6 +50,7 @@
 <p>もしこのページが気になっているならポケットでこのページをブックマークしてください。</p>
 <div style="text-align:center"><a class="excellent" href="https://getpocket.com/edit?url=https://yaohata.net/contents/lp/tsugumon-a.xhtml">pocket</a></div>
 </section>
+<internal-fetch path="../boilerplates.xhtml" type="html" target="つぐもんキャンペーン"/>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
 </article>
