--- a/contents/lp/html-a.xhtml
+++ b/contents/lp/html-a.xhtml
@@ -125,8 +125,10 @@ Access to fetch at 'file:///C:/html/foo.json' from origin 'null' has been blocke
 <br/>日本のHTMLエンジニアからこれができるなら、自分たちが持つスキルや知識を適切に評価され、尊重され、そして、世界中の企業や組織が、私たちの専門知識を求めるでしょう。
 <br/>輝かしい未来を手に入れる一歩です。それでは、気軽にご連絡ください。</p>
 </section>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="お問合せ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報" type="xhtml"/>
 </article>
 </main>
 </body>
