--- a/contents/lp/html-b.xhtml
+++ b/contents/lp/html-b.xhtml
@@ -78,8 +78,10 @@
 <p>データビジュアライゼーションは、ビジネスの成功に不可欠なツールです。八百幡コンポーネンツを導入することで、データビジュアライゼーションの壁を取り払い、プロジェクトの成功に貢献します。</p>
 <p>八百幡コンポーネンツは、データビジュアライゼーションの新たな次元への招待状です。データの力を最大限に引き出し、意思決定を強化しましょう。</p>
 </section>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="お問合せ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報" type="xhtml"/>
 </article>
 </main>
 </body>
