--- a/contents/lp/saxon-b.xhtml
+++ b/contents/lp/saxon-b.xhtml
@@ -56,8 +56,10 @@ $json?arr?*[?n2 >= 2]?n
 <h3>【小まとめ】</h3>
 <p>私は、SaxonJSによってXPath3.1とXSL3.0の知識を駆使し、JSONやXMLの特定データの抽出・加工をスムーズかつ効率的に行います。
 <br/>八百幡のサービスにより、時間とコストの削減、正確性、カスタマイズ性を実現することができます。我々と一緒に、あなたのビジネスを次のレベルへと引き上げましょう。</p>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="お問合せ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報" type="xhtml"/>
 </section>
 </article>
 </body>
