--- a/contents/lp/tsugumon-b.xhtml
+++ b/contents/lp/tsugumon-b.xhtml
@@ -83,8 +83,10 @@
 <p>ますは実際につぐもんを体験しましょう。<a href="https://tsugumon.net/enquetes?type=popular&amp;page=1&amp;class=ordinary">人気アンケート一覧</a>から入ると、良いでしょう。</p>
 </section>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="つぐもんキャンペーン"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="お問合せ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報" type="xhtml"/>
 </article>
 </main>
 </body>
