--- a/contents/lp/xml-c.xhtml
+++ b/contents/lp/xml-c.xhtml
@@ -71,8 +71,10 @@
 参加してみませんか。<br/>
 何か関心が少しでもあるならこのページをシェアをお願いします。</p>
 </section>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="お問合せ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報" type="xhtml"/>
 </article>
 </body>
 </html>
