--- a/contents/boilerplates.xhtml
+++ b/contents/boilerplates.xhtml
@@ -4,6 +4,39 @@
 <title>ボイラープレート</title>
 </head>
 <body>
+
+<div id="ホームページ">
+    <div class="card mb-3" style="max-width: 600px;">
+        <div class="row g-0">
+          <div class="col-4">
+            <img style="" src="/asset/img/logo.png" alt="ロゴ"/>
+          </div>
+          <div class="col-8">
+            <div class="card-body">
+              <h5 class="card-title">八百幡</h5>
+              <p class="card-text">八百幡（やおはた）ではプログラミング、マーケティング、求人、コンサルティングなど、多彩な業務を請け負います。</p>
+              <a href="/contents/aboutme.xhtml" class="btn btn-primary">ホームページを見る</a>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
+<div id="自己紹介">
+    <div class="card mb-3" style="max-width: 600px;">
+        <div class="row g-0">
+          <div class="col-4">
+            <img style="" src="/asset/img/井本4x4.jpg" alt="肖像"/>
+          </div>
+          <div class="col-8">
+            <div class="card-body">
+              <h5 class="card-title">井本拓伸</h5>
+              <p class="card-text">2022年10月よりフリーランスとして本格的に活動を始めました。</p>
+              <a href="/contents/aboutme.xhtml" class="btn btn-primary">自己紹介を見る</a>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
 <div id="つぐもんキャンペーン">
 <p>初回限定、3つのアンケートを各100回答の収集を2000円で請け負います。
 手数料無料です。
