--- a/contents/cheering-example/example17.xhtml
+++ b/contents/cheering-example/example17.xhtml
@@ -18,13 +18,11 @@
 <p>【止まらない】バイエンスを知った者の末路……</p>
 <a href="https://www.youtube.com/@VAIENCE">youtubeチャンネル</a>
 </section>
-<internal-fetch path="../boilerplates.xhtml" target="支援広告例男性用"/>
-<internal-fetch path="../boilerplates.xhtml" target="支援広告"/>
-<div>
-<p>シェアして動画を支援しよう！</p>
-<share-buttons template="share-buttons"></share-buttons>
-</div>
-<internal-fetch path="../boilerplates.xhtml" target="支援広告FAQ"/>
+<internal-fetch path="../boilerplates.xhtml" target="支援広告例" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="支援広告" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="支援広告FAQ" type="xhtml"/>
 </article>
 </body>
 </html>
