--- a/contents/cheering-example/example4.xhtml
+++ b/contents/cheering-example/example4.xhtml
@@ -19,13 +19,11 @@
 <br/><a href="https://www.johnnys-net.jp/page?id=artistTop&amp;artist=43">Snow Man ホームページ</a>
 <br/><a href="https://www.youtube.com/@J_SNOWMAN">Snow Man Youtubeチャンネル</a>
 </section>
-<internal-fetch path="../boilerplates.xhtml" target="支援広告例"/>
-<internal-fetch path="../boilerplates.xhtml" target="支援広告"/>
-<div>
-<p>シェアして動画を支援しよう！</p>
-<share-buttons template="share-buttons"></share-buttons>
-</div>
-<internal-fetch path="../boilerplates.xhtml" target="支援広告FAQ"/>
+<internal-fetch path="../boilerplates.xhtml" target="支援広告例" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="支援広告" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="支援広告FAQ" type="xhtml"/>
 </article>
 </body>
 </html>
