--- a/contents/cheering-example/example6.xhtml
+++ b/contents/cheering-example/example6.xhtml
@@ -18,13 +18,11 @@
 <p>海の資源、限りある資源。課題に向かっていく姿を応援しています。</p>
 <a href="https://www.youtube.com/@suichannel-umi">Youtubeチャンネル</a>
 </section>
-<internal-fetch path="../boilerplates.xhtml" target="支援広告例"/>
-<internal-fetch path="../boilerplates.xhtml" target="支援広告"/>
-<div>
-<p>シェアして動画を支援しよう！</p>
-<share-buttons template="share-buttons"></share-buttons>
-</div>
-<internal-fetch path="../boilerplates.xhtml" target="支援広告FAQ"/>
+<internal-fetch path="../boilerplates.xhtml" target="支援広告例" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="支援広告" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="支援広告FAQ" type="xhtml"/>
 </article>
 </body>
 </html>
