--- a/contents/lp/tsugumon-c.xhtml
+++ b/contents/lp/tsugumon-c.xhtml
@@ -51,8 +51,10 @@
 <div style="text-align:center"><a class="excellent" href="https://getpocket.com/edit?url=https://yaohata.net/contents/lp/tsugumon-a.xhtml">pocket</a></div>
 </section>
 <internal-fetch path="../boilerplates.xhtml" type="html" target="つぐもんキャンペーン"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="お問合せ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報" type="xhtml"/>
 </article>
 </main>
 </body>
