--- a/contents/lp/xml-a.xhtml
+++ b/contents/lp/xml-a.xhtml
@@ -78,8 +78,10 @@ transformer.transform(new DOMSource(doc),new StreamResult(Files.newOutputStream(
 そして予定通り、3日で業務は完了となり、大変喜ばれました。</p>
 </section>
 <p>まずは「こうしてほしい」「こうできないか」など連絡をお願いします。</p>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="お問合せ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報" type="xhtml"/>
 <p>労働期間が1日のちょっとした頼みなら、ランサーズからなら業務委託契約書などは必要なくすばやく購入ができます。</p>
 <div class="card" style="max-width:32rem;margin:1rem auto;">
 <div class="card-body">
