--- a/contents/lp/xml-b.xhtml
+++ b/contents/lp/xml-b.xhtml
@@ -26,8 +26,10 @@
 成果は上々で、これによって、レポートの間違った箇所は訂正され、JSとXSLTの特徴がはっきり分かるようになりました。<br/>
 そして予定通り、3日で業務は完了となり、大変喜ばれました。</p> 
 <p>このように、今の私はXMLに関わることならなんでも、1日から数カ月の長期まで、仕事を請け負っています。</p>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="お問合せ"/>
-<internal-fetch path="../boilerplates.xhtml" type="html" target="運営情報"/>
+<internal-fetch path="../boilerplates.xhtml" target="お問合せ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="自己紹介" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="ホームページ" type="xhtml"/>
+<internal-fetch path="../boilerplates.xhtml" target="運営情報" type="xhtml"/>
 <p>また、1日で終わるちょっとした業務ならランサーズ経由で受け付けています。この場合なら業務委託契約書は不要です。</p>
 <div class="card" style="max-width:32rem;margin:1rem auto;">
 <div class="card-body">
