--- a/contents/boilerplates.xhtml
+++ b/contents/boilerplates.xhtml
@@ -25,7 +25,7 @@
     <div class="card mb-3" style="max-width: 600px;">
         <div class="row g-0">
           <div class="col-4">
-            <img style="" src="/asset/img/井本4x4.jpg" alt="肖像"/>
+            <img style="" src="/asset/img/井本4X4.jpg" alt="肖像"/>
           </div>
           <div class="col-8">
             <div class="card-body">
