--- a/contents/lp/tsugumon-a.xhtml
+++ b/contents/lp/tsugumon-a.xhtml
@@ -37,7 +37,7 @@
 <br/><img src="img/クロス集計あなたはラーメンのスープで、どれが一番好きですか.png" style="max-width:300px"/>
 <br/>見ての通り、スープによって人気のサービスが変わってきます。
 <br/>さらに「白ネギ」で部分クロス集計するとこうなります。
-<br/><img src="img/部部分クロス集計あなたはラーメンのスープで、どれが一番好きですか.png" style="max-width:300px"/>
+<br/><img src="img/部分クロス集計あなたはラーメンのスープで、どれが一番好きですか.png" style="max-width:300px"/>
 <br/>ラーメンのネギのトッピングと言えば青ネギが多いですが、豚骨ラーメンの場合は白ねぎが求められているようです。
 <br/>そういえば私も一覧でオーダーするときは白ねぎを頼むことが多いです。
 </p>
