--- a/contents/lp/tsugumon-a.xhtml
+++ b/contents/lp/tsugumon-a.xhtml
@@ -39,7 +39,7 @@
 <br/>さらに「白ネギ」で部分クロス集計するとこうなります。
 <br/><img src="img/部分クロス集計あなたはラーメンのスープで、どれが一番好きですか.png" style="max-width:300px"/>
 <br/>ラーメンのネギのトッピングと言えば青ネギが多いですが、豚骨ラーメンの場合は白ねぎが求められているようです。
-<br/>そういえば私も一覧でオーダーするときは白ねぎを頼むことが多いです。
+<br/>そういえば私も、ラーメンチェーン店の一蘭でオーダーするときは、白ねぎを頼むことが多いです。
 </p>
 
 <h2>ビジネスの提案</h2>
