--- a/kanko/entry1.html
+++ b/kanko/entry1.html
@@ -8,24 +8,24 @@
 <article>
 <h2>レトロ展望室</h2>
 <p>門司港レトロ展望室の建物です。　手前は国際友好記念図書館との事でした。
-<img src="image/photos/レトロ展望室タワー-1.JPG" width="200"/></p>
+<img src="image//レトロ展望室タワー-1.JPG" width="200"/></p>
 <p>レトロ展望室の出入り口です。　103メートルの高さから270度の景色を一望できるので人気があります。
-<img src="image/photos/レトロ展望室-2.JPG" width="300"/></p>
+<img src="image//レトロ展望室-2.JPG" width="300"/></p>
 <p>レトロ展望室正面側の全景です。
-<img src="image/photos/レトロ展望室-3.JPG" width="300"/></p>
+<img src="image//レトロ展望室-3.JPG" width="300"/></p>
 <p>私は、門司港レトロに来たら必ずこちらからの景色を眺めます。 一人で門司港レトロに来ることもありますが、一人のんびり景色を眺めるのも気持ち良いですよ。
 気分転換にも最適な場所だと思います。</p>
 <h2>展望室からの景色</h2>
 <p>レトロ展望室から見える関門橋です。
-<img src="image/photos/レトロ展望室からの景色-1.JPG" width="300"/></p>
+<img src="image//レトロ展望室からの景色-1.JPG" width="300"/></p>
 <p>下関側の海峡ゆめタワーです。　高さは、レトロ展望室とほとんど変わらないと聞いたことがあります。
-<img src="image/photos/レトロ展望室からの景色-2.JPG" width="300"/></p>
+<img src="image//レトロ展望室からの景色-2.JPG" width="300"/></p>
 <p>関門海峡ミュージアム（海峡ドラマシップ）です。　こちらでは昭和時代のの風景が楽しめます。
-<img src="image/photos/レトロ展望室からの景色-3.JPG" width="300"/></p>
+<img src="image//レトロ展望室からの景色-3.JPG" width="300"/></p>
 <p>門司港ホテルです。
-<img src="image/photos/レトロ展望室からの景色-4.JPG" width="300"/></p>
+<img src="image//レトロ展望室からの景色-4.JPG" width="300"/></p>
 <p>大昔、佐々木小次郎と宮本武蔵が決闘したといわれる巌流島です。　巌流島への観光船も出ています。
-<img src="image/photos/レトロ展望室からの景色-5.JPG" width="300"/></p>
+<img src="image//レトロ展望室からの景色-5.JPG" width="300"/></p>
 </article>
 </body>
 </html>
