--- a/kanko/ミクニワールドスタジアム.html
+++ b/kanko/ミクニワールドスタジアム.html
@@ -8,16 +8,16 @@
 <article>
 <p>
 関門海峡が見える海に面したスタジアムです。いい評判があったのでどんなものか見たかったので来てみました。
-<a href="image/photos/ミクニワールドスタジアム1.jpg" rel="lightbox"><img src="image/photos/ミクニワールドスタジアム1.jpg" width="600"/></a></p>
+<a href="image//ミクニワールドスタジアム1.jpg" rel="lightbox"><img src="image//ミクニワールドスタジアム1.jpg" width="600"/></a></p>
 <p>
 この日は中学生の大会が事前にあり、ギラヴァンツの試合は15:00からキックオフでした。
-<img src="image/photos/ミクニワールドスタジアム2.jpg" width="600"/>
-<img src="image/photos/ミクニワールドスタジアム3.jpg" width="600"/></p>
+<img src="image//ミクニワールドスタジアム2.jpg" width="600"/>
+<img src="image//ミクニワールドスタジアム3.jpg" width="600"/></p>
 <p>
 関門海峡を望むことができます。
-<img src="image/photos/ミクニワールドスタジアム4.jpg" width="600"/>
-<img src="image/photos/ミクニワールドスタジアム5.jpg" width="600"/></p>
-<p>この日は接戦で3-2のギリギリの勝利でした。ファンの熱気がすごいものでした。<img src="image/photos/ミクニワールドスタジアム6.jpg" width="600"/></p>
+<img src="image//ミクニワールドスタジアム4.jpg" width="600"/>
+<img src="image//ミクニワールドスタジアム5.jpg" width="600"/></p>
+<p>この日は接戦で3-2のギリギリの勝利でした。ファンの熱気がすごいものでした。<img src="image//ミクニワールドスタジアム6.jpg" width="600"/></p>
 </article>
 </body>
 </html>
