--- a/kanko/entry3.html
+++ b/kanko/entry3.html
@@ -7,10 +7,10 @@
 <body>
 <h1>マリンゲート門司</h1>
 <article>
-<p><img src="image/photos/フェリー乗り場-1.JPG" width="600"/>
+<p><img src="image//フェリー乗り場-1.JPG" width="600"/>
 下関の唐戸行高速船と、巌流島行きフェリーの切符売り場です。
 唐戸行は片道390円、巌流島行きは往復で400円です。</p>
-<p><img src="image/photos/フェリー乗り場-2.JPG" width="600"/>
+<p><img src="image//フェリー乗り場-2.JPG" width="600"/>
 唐戸までの所要時間は約5分です。</p>
 </p>
 </article>
